--- a/roles/reconcile/defaults/main.yml
+++ b/roles/reconcile/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
-# defaults file for etcd-ansible-operator
+# defaults file for etcd-ha-operator
 
 
 image: "{{ 'quay.io/coreos/etcd:v' + version | string }}"
