Build with osdk v0.9.0, fix status update for new crd & rotate_tls.yaml
- Refactor tls certs

- Refactor deploy/operator.yaml to add TODO for image name

- Refactor tls playbook, fix labels on secret for certs

--- a/deploy/rbac.yaml
+++ b/deploy/rbac.yaml
@@ -30,8 +30,9 @@ rules:
 - apiGroups:
   - apps
   resources:
-  - deployment
+  - deployments
   - statefulsets
+  - replicasets
   verbs:
   - "*"
 
