--- a/roles/reconcile/tasks/reconcile_pods.yaml
+++ b/roles/reconcile/tasks/reconcile_pods.yaml
@@ -28,6 +28,9 @@
   - name: set cluster status when new
     vars:
       etcd_status: "Creating"
+      peer_tls_secret: "{{ peer_tls_secret }}"
+      server_tls_secret: "{{ server_tls_secret }}"
+      operator_tls_secret: "{{ operator_tls_secret }}"
     k8s_status:
       api_version: etcd.database.coreos.com/v1beta3
       kind: EtcdCluster
@@ -39,9 +42,9 @@
 
 - name: set TLS status variables when present
   set_fact:
-    peer_tls_secret: "{{ etcd_stateful_set[0].get('status', {}).get('peerTLSSecret', '') }}"
-    server_tls_secret: "{{ etcd_stateful_set[0].get('status', {}).get('serverTLSSecret', '') }}"
-    operator_tls_secret: "{{ etcd_stateful_set[0].get('status', {}).get('operatorTLSSecret', '') }}"
+    peer_tls_secret: "{{ _etcd_database_coreos_com_etcdcluster.get('status', {}).get('peerTLSSecret', '') }}"
+    server_tls_secret: "{{ _etcd_database_coreos_com_etcdcluster.get('status', {}).get('serverTLSSecret', '') }}"
+    operator_tls_secret: "{{ _etcd_database_coreos_com_etcdcluster.get('status', {}).get('operatorTLSSecret', '') }}"
   when: etcd_cluster_phase == "existing" and etcd_secure_client == "present" and etcd_secure_peer == "present"
 
 - name: set TLS status variables when absent
@@ -54,7 +57,7 @@
 - name: set cluster member names
   set_fact:
     etcd_cluster_member_names: "{{ etcd_cluster_member_names + [etcd_cluster_name + '-' + item|string] }}"
-  with_sequence: start={{0}} end={{size - 1}}
+  with_sequence: start={{0}} end={{size|int - 1}}
   when: etcd_cluster_phase == "existing"
 
 - name: check if TLS rotation
@@ -82,14 +85,24 @@
   when: (etcd_cluster_phase == "existing" and etcd_secure_client == "present")
   ignore_errors: yes
 
+- name: update tls variables
+  set_fact:
+    peer_tls_secret: "{{ _tls.static.member.peer_secret }}"
+    server_tls_secret: "{{ _tls.static.member.server_secret }}"
+    operator_tls_secret: "{{ _tls.static.operator_secret }}"
+  when: etcd_cluster_phase == "existing" and etcd_secure_client == "present" and etcd_secure_peer == "present"
+
 - block:
 
   - name: Set status and exit when cluster is unavailable
     vars:
       etcd_status: "Unavailable"
       etcd_status_reason: "Etcd is trying to establish quorum"
+      peer_tls_secret: "{{ peer_tls_secret }}"
+      server_tls_secret: "{{ server_tls_secret }}"
+      operator_tls_secret: "{{ operator_tls_secret }}"
     k8s_status:
-      api_version: etcd.database.coreos.com/v1beta2
+      api_version: etcd.database.coreos.com/v1beta3
       kind: EtcdCluster
       name: "{{ etcd_cluster_name }}"
       namespace: "{{ etcd_namespace }}"
@@ -103,6 +116,9 @@
 - name: Set status when cluster is available
   vars:
     etcd_status: Available
+    peer_tls_secret: "{{ peer_tls_secret }}"
+    server_tls_secret: "{{ server_tls_secret }}"
+    operator_tls_secret: "{{ operator_tls_secret }}"
   k8s_status:
     api_version: etcd.database.coreos.com/v1beta3
     kind: EtcdCluster
@@ -122,6 +138,9 @@
   - name: Set status when Scaling
     vars:
       etcd_status: Scaling
+      peer_tls_secret: "{{ peer_tls_secret }}"
+      server_tls_secret: "{{ server_tls_secret }}"
+      operator_tls_secret: "{{ operator_tls_secret }}"
     k8s_status:
       api_version: etcd.database.coreos.com/v1beta3
       kind: EtcdCluster
