--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -19,13 +19,15 @@ spec:
             - /usr/local/bin/ao-logs
             - /tmp/ansible-operator/runner
             - stdout
-          image: quay.io/alaypatel07/etcd-ha-operator:v0.6.0
+#          TODO: change the image name
+          image: quay.io/alaypatel07/etcd-ha-operator:v0.9.0
           volumeMounts:
             - mountPath: /tmp/ansible-operator/runner
               name: runner
               readOnly: true
         - name: etcd-ha-operator
-          image: quay.io/alaypatel07/etcd-ha-operator:v0.6.0
+#          TODO: change the image name
+          image: quay.io/alaypatel07/etcd-ha-operator:v0.9.0
           ports:
           - containerPort: 60000
             name: metrics
