--- a/roles/reconcile/tasks/create_certs.yaml
+++ b/roles/reconcile/tasks/create_certs.yaml
@@ -6,7 +6,7 @@
   set_fact:
 #    operator_secret: "{{ lookup('k8s', api_version='v1', kind='Secret', namespace=etcd_namespace,
 #                                  resource_name=_tls.static.operator_secret) }}"
-    tls_directory: "/tmp/etcdtls/{{etcd_cluster_name}}"
+    tls_directory: "/tmp/etcdtls/{{etcd_cluster_name}}/{{tls_secret_name}}"
     ca_cert: "{{ operator_secret['data']['etcd-client-ca.crt'] | b64decode}}"
     client_cert: "{{ operator_secret['data']['etcd-client.crt'] | b64decode}}"
     client_key: "{{ operator_secret['data']['etcd-client.key'] | b64decode}}"
